--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <link rel="stylesheet" href="main.css">
 <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <title>E-commerce</title>
+    <title>The Banana Republic</title>
   </head>
   <body>
     <!--NAV-->
     <nav class="navbar navbar-expand-sm navbar-dark bg-black">
       <div class="container">
-          <a href="#" class="navbar-brand">Watch Time</a>
+          <a href="#" class="navbar-brand">The Banana Republic</a>
           <button class="navbar-toggler" data-toggle="collapse" 
           data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
                  <a href="#" class="nav-link">Services</a>
                </li>
                <li class="nav-item">
-                <a href="#" class="nav-link">Products</a>
+                <a href="#" class="nav-link">Bananas</a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link">About</a>
@@ -62,9 +62,9 @@
   <div class="carousel-item carousel-image-1 active">
     <div class="container">
       <div class="carousel-caption d-none d-sm-block text-right mb-5">
-        <h1 class="display-3 title-color">Title One</h1>
-        <p class="lead">Lorem ipsum dolor sit amet 
-          consectetur, adipisicing elit. Ipsam, blanditiis.</p>
+        <h1 class="display-3 title-color">The Banana Republic</h1>
+        <p class="lead">Sign up and have bananas imported straight from Cuba 
+          to your doorstep.</p>
           <a href="#" class="btn btn-color slide-btn btn-lg">
             Sign Up Now
           </a>
@@ -120,8 +120,8 @@
         <h5 class="font-weight-bold text-uppercase">
           Worldwide Shipping
         </h5>
-        <p class="text-capitalize">Lorem ipsum dolor sit amet, 
-          consectetur adipisicing elit. Iusto, hic?</p>
+        <p class="text-capitalize">We Import fresh bananas to anyone around the globe 
+          from any Banana Republic you choose.</p>
       </div>
       <!--end of Single Service-->
        <!--Single service-->
@@ -134,8 +134,7 @@
         <h5 class="font-weight-bold text-uppercase">
           Certified by Gurus
         </h5>
-        <p class="text-capitalize">Lorem ipsum dolor sit amet, 
-          consectetur adipisicing elit. Iusto, hic?</p>
+        <p class="text-capitalize">Each Banana we deliver is checked for freshness and healthiness. Always certified by the FDA, DEA, FBI, and CIA.</p>
       </div>
       <!--end of Single Service-->
        <!--Single service-->
@@ -148,8 +147,8 @@
         <h5 class="font-weight-bold text-uppercase">
          30 Days Money Back
         </h5>
-        <p class="text-capitalize">Lorem ipsum dolor sit amet, 
-          consectetur adipisicing elit. Iusto, hic?</p>
+        <p class="text-capitalize">if your banana is lacking in the expected quality of the product, 
+          you can always refund it 30 days after delivery.</p>
       </div>
       <!--end of Single Service-->
     </div>
@@ -163,7 +162,7 @@
     <div class="row">
       <div class="col-10 mx-auto col-sm-6 text-center">
         <h1 class="text-capitalize product-title">
-          Featured Products
+          Featured Bananas
         </h1>
       </div>
     </div>
@@ -174,13 +173,13 @@
       <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image1.jpg" alt="" 
+            <img src="Images/Image 1.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>350</span>
+              <h5 id="item-name">Mexican Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>2 a bunch</span>
             </div>
           </div>
         </div>
@@ -190,13 +189,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image2.jpg" alt="" 
+            <img src="Images/Image 2.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>450</span>
+              <h5 id="item-name">Ecuadorian Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>5 a Bunch </span>
             </div>
           </div>
         </div>
@@ -206,13 +205,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image3.jpg" alt="" 
+            <img src="Images/Image 3.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>550</span>
+              <h5 id="item-name">Chocolate Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>10 Each</span>
             </div>
           </div>
         </div>
@@ -222,13 +221,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image4.jpg" alt="" 
+            <img src="Images/Image 4.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>650</span>
+              <h5 id="item-name">Peeled Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>0.5 Each</span>
             </div>
           </div>
         </div>
@@ -238,13 +237,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image5.jpg" alt="" 
+            <img src="Images/Image 5.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>750</span>
+              <h5 id="item-name">Brazilian Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>10 a Bunch</span>
             </div>
           </div>
         </div>
@@ -254,13 +253,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image6.jpg" alt="" 
+            <img src="Images/Image 6.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>850</span>
+              <h5 id="item-name">Guatemalan Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>6 a Bunch</span>
             </div>
           </div>
         </div>
@@ -270,13 +269,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image7.jpg" alt="" 
+            <img src="Images/Image 7.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>950</span>
+              <h5 id="item-name">Colombian Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>20 a Bag</span>
             </div>
           </div>
         </div>
@@ -286,13 +285,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image8.jpg" alt="" 
+            <img src="Images/Image 8.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>350</span>
+              <h5 id="item-name">Paraguayan Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>7 a Bunch</span>
             </div>
           </div>
         </div>
@@ -302,13 +301,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image9.jpg" alt="" 
+            <img src="Images/Image 9.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>450</span>
+              <h5 id="item-name">Uruguayan Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>8 a Bunch</span>
             </div>
           </div>
         </div>
@@ -318,13 +317,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image10.jpg" alt="" 
+            <img src="Images/Image 10.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>850</span>
+              <h5 id="item-name">Argentinian Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>15 a Bunch</span>
             </div>
           </div>
         </div>
@@ -334,13 +333,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image11.jpg" alt="" 
+            <img src="Images/Image 11.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>750</span>
+              <h5 id="item-name">Venezuelan Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>0.01 a Bunch</span>
             </div>
           </div>
         </div>
@@ -350,13 +349,13 @@
        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3">
         <div class="card Single-Item">
           <div class="img-container">
-            <img src="Images/image12.jpg" alt="" 
+            <img src="Images/Image 12.jpg" alt="" 
             class="card-img-top product-img">
           </div>
           <div class="card-body">
             <div class="card-text d-flex justify-content-between text-capitalize">
-              <h5 id="item-name">Branded Watch</h5>
-              <span><i class="fas fa-dollar-sign"></i>350</span>
+              <h5 id="item-name">Cuban Banana</h5>
+              <span><i class="fas fa-dollar-sign"></i>20 a Bunch</span>
             </div>
           </div>
         </div>
@@ -378,9 +377,10 @@
       </div>
       <div class="col-lg-7 text-lg-right text-center text-color about-text">
         <h1>About Company</h1>
-        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing
-           elit. Itaque odio necessitatibus in dignissimos ipsam. Ea non id obcaecati 
-           voluptate corporis cumque necessitatibus nostrum libero explicabo.</p>
+        <p class="text">We are a company that buys and sells Bananas and Banana Accessories.
+          We buy our bananas from the countries of Central and South America and then sell them to you, 
+          the customer. Doing it this way gives you the option of which country you can buy bananas from.
+          We also have a huge surplus of bananas which means no one will go hungry. </p>
       </div>
     </div>
   </div>
